[package]
name = "mpc-payments"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threshold_crypto = "0.4.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
assert_cmd = "2.0.4"
predicates = "2.0"
uuid = { version = "1.8.0", features = ["v4"] }
warp = "0.3"